--- a/BTC_analysis.ipynb
+++ b/BTC_analysis.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/ph/8101ptr551z8pcbjb0sd3j_h0000gn/T/ipykernel_4513/1353324527.py:3: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "/var/folders/ph/8101ptr551z8pcbjb0sd3j_h0000gn/T/ipykernel_2784/1353324527.py:3: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
       "  btc = yf.download(\"BTC-USD\" , start = \"2021-01-01\", end = \"2025-06-1\", interval = \"1d\")\n",
       "[*********************100%***********************]  1 of 1 completed\n"
      ]
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "7f59c9bb",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
      "output_type": "stream",
      "text": [
       "Index(['Close', 'High', 'Low', 'Open', 'Volume', 'Return', 'MA20', 'BB_upper',\n",
-      "       'BB_lower', 'Volatility20', 'MaxDrawdown', 'ATR20'],\n",
+      "       'BB_lower', 'Volatility20', 'MaxDrawdown'],\n",
       "      dtype='object', name='Price')\n"
      ]
     },
@@ -380,7 +380,7 @@
        "<Axes: title={'center': 'Max Drawdown'}, xlabel='Date'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
